@@ -16,9 +16,8 @@
 #include <memory>
 #include <vector>
 
+#include "fixprecdec.h"
 #include "types.h"
-
-#define FRACTION_UNIT 10000
 
 class Client;
 
@@ -59,8 +58,6 @@ protected:
 
     /*!
      * Size of first child relative to whole size.
-     * For example, a value of FRACTION_UNIT means full size
-     * and FRACTION_UNIT/2 means 50%.
      */
-    int fraction_ = 0;
+    FixPrecDec fraction_ = FixPrecDec::fromInteger(0);
 };
